Fri Dec 21 15:16:00 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_to_encoding_index): should return error instead of
	  exception even if type is incorrect.

Fri Dec 21 14:58:27 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enumerator.c (enumerator_init_copy): prohibit cloning of
	  generators since Fibers cannot be copied.

Fri Dec 21 14:46:07 2007  Tanaka Akira  <akr@fsij.org>

	* io.c (Init_IO): define IO::BINARY even if O_BINARY is not exist.

Fri Dec 21 14:01:14 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* test/ruby/test_system.rb (TestSystem::valid_syntax): apply
	  ASCII-8BIT encoding explicitly.

	* re.c (rb_reg_prepare_re): add encoding name in the message.

Fri Dec 21 13:54:05 2007  Tanaka Akira  <akr@fsij.org>

	* re.c: change "character encodings differ" error messages.

Fri Dec 21 13:46:58 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_enc_register): set encoding constant.

	* encoding.c (rb_enc_find_index): replace non-alphanumeric chars with
	  underscores, so that initialize function can be called.

	* encoding.c (rb_enc_find_index): extension libraries have lower case
	  names conventionally.

	* ruby.c (proc_options, process_options): finds encoding after
	  load_path is initialized.

Fri Dec 21 13:10:57 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_external_encoding): new method.

	* encoding.c (rb_enc_from_encoding): returns Qnil for NULL
	  encoding.

	* io.c (rb_io_external_encoding): should fill delayed
	  initialization for STDIN.

Fri Dec 21 13:09:11 2007  Tanaka Akira  <akr@fsij.org>

	* encoding.c (rb_locale_charmap): return nil if no locale information.

Fri Dec 21 12:55:39 2007  Tanaka Akira  <akr@fsij.org>

	* lib/runit, lib/rubyunit.rb, test/testunit/runit: removed.

Fri Dec 21 12:45:49 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_chomp_bang): avoid unnecessary loop using
	  ONIGENC_LEFT_ADJUST_CHAR_HEAD().
